GH-10069: Mitigate `warning: [this-escape]` in the project
Fixes: https://github.com/spring-projects/spring-integration/issues/10069

Suppress warnings introduced with Java 24 build toolchain:

spring-integration-core:
- Add `@SuppressWarnings("this-escape")` for 23 constructor calls
- Make `PublisherAnnotationAdvisor.pointcut` `transient` (serial warning)

spring-integration-amqp:
- Add `@SuppressWarnings("this-escape")` for 7 constructor calls

spring-integration-cassandra:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-event:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-file:
- Add `@SuppressWarnings("this-escape")` for 4 constructor calls
- Fix 2 deprecation warnings (`Locale` constructor, `Runtime.exec`)

spring-integration-ftp:
- Add `@SuppressWarnings("this-escape")` for 4 constructor calls

spring-integration-graphql:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-jms:
- Add `@SuppressWarnings("this-escape")` for 3 constructor calls

spring-integration-jmx:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-kafka:
- Add `@SuppressWarnings("this-escape")` for 4 constructor calls

spring-integration-mail:
- Add `@SuppressWarnings("this-escape")` for 5 constructor calls

spring-integration-mqtt:
- Add `@SuppressWarnings("this-escape")` for 2 constructor calls

spring-integration-redis:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-rsocket:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-sftp:
- Add `@SuppressWarnings("this-escape")` for 4 constructor calls
- Fix 1 serial warnings

spring-integration-smb:
- Add `@SuppressWarnings("this-escape")` for 3 constructor calls

spring-integration-webflux:
- Add `@SuppressWarnings("this-escape")` for 1 constructor call

spring-integration-websocket:
- Add `@SuppressWarnings("this-escape")` for 1 construct